Update an answer

--- a/Homework2.ipynb
+++ b/Homework2.ipynb
@@ -261,7 +261,7 @@
    "id": "30790337-8843-4942-8514-c54ac8a796b2",
    "metadata": {},
    "source": [
-    "It is different."
+    "It is different from Q3. This is because we are embedding both the question and the answer. When we embed both the question and the answer, there is a higher chance that user query can match either of question or answer from the FAQ. "
    ]
   },
   {
